package testcase_executor.testcase_runner;

abstract public class TestCaseRunner {
    abstract public boolean addressSingleLine(String line); 
}
